<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/enter_last_6_digit_of_imei"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/otpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <include layout="@layout/custom_otp_edit_text" />

            <include layout="@layout/custom_otp_edit_text" />

            <include layout="@layout/custom_otp_edit_text" />

            <include layout="@layout/custom_otp_edit_text" />

            <include layout="@layout/custom_otp_edit_text" />

            <include layout="@layout/custom_otp_edit_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/imei"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpContainer" />


        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <EditText-->
        <!--                android:id="@+id/editText"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="8dp"-->
        <!--                android:inputType="text"-->
        <!--                android:hint="Enter text"-->
        <!--                android:background="@drawable/view_border"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintEnd_toStartOf="@+id/scannerIcon"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--            <ImageView-->
        <!--                android:id="@+id/scannerIcon"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:src="@drawable/qr_code_scanner"-->
        <!--                android:layout_margin="8dp"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:layout_constraintBottom_toBottomOf="parent"/>-->

        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/view_border"
            android:drawableEnd="@drawable/qr_code_scanner"
            android:ems="10"
            android:hint=""
            android:inputType="number"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="Vehicle Details"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/view_border"
            android:ems="10"
            android:hint="Tag Name"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/view_border"
            android:ems="10"
            android:hint="Registration Number"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            tools:layout_editor_absoluteX="18dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="Vehicle Type"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3"
            tools:layout_editor_absoluteX="19dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <include
                        android:id="@+id/tv1"
                        layout="@layout/vehicle_item_view" />

                    <include
                        android:id="@+id/tv2"
                        layout="@layout/vehicle_item_view" />

                    <include
                        android:id="@+id/tv3"
                        layout="@layout/vehicle_item_view" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/toggleButton"
                        android:layout_width="58dp"
                        android:layout_height="48dp"
                        android:text="+"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/rounded_plus_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/vehicleTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/more"
                        android:textSize="11sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />


                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/clVehicleType"
            app:spanCount="3"
            tools:layout_editor_absoluteX="1dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            tools:layout_editor_absoluteX="1dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_arrow"
                android:entries="@android:array/phoneTypes"
                android:padding="8dp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_arrow"
                android:entries="@android:array/imProtocols"
                android:padding="8dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_arrow"
            android:entries="@android:array/emailAddressTypes"
            android:padding="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="1dp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_arrow"
            android:entries="@android:array/phoneTypes"
            android:padding="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/spinner3"
            tools:layout_editor_absoluteX="1dp" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_arrow"
            android:entries="@android:array/postalAddressTypes"
            android:padding="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/spinner4"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/ownership"
            app:layout_constraintTop_toBottomOf="@+id/spinner5" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:padding="8dp"
                android:text="@string/own" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/contractor" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_arrow"
            android:entries="@android:array/emailAddressTypes"
            android:padding="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:layout_editor_absoluteX="1dp" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
